# E-nose-analysis

./: .gitignore  Dockerfile  README.md  app.py  compare_models.py  evaluate_model.py  pyproject.toml  requirements.txt  train_model.py
.streamlit/: config.toml
data/samples/: sample.csv
models/: README.md  __init__.py  cnn.py  lstm.py  transformer.py
models/cnn/: cnn_v1_metadata.json
models/lstm/: lstm_v1_metadata.json
models/transformer/: transformer_v1_metadata.json
utils/: data_utils.py  inference.py  model_manager.py  page_utils.py  pipeline_streamlit.py  viz_utils.py
utils/pages/: __init__.py  home_page.py  info_page.py  process_page.py  result_page.py  styles.py
