[build-system]
requires = [
    "setuptools>=65.5.1",
    "wheel>=0.40.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "e-nose-analysis"
description = "Electronic Nose Analysis System"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"  # Allow Python 3.12 support
license = {text = "MIT"}